--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+
 /*
     1. Use a more-intuitive box-sizing model.
 */
@@ -59,4 +61,286 @@ h6 {
 #root,
 #__next {
 	isolation: isolate;
+}
+
+img {
+	max-width: 20px;
+}
+
+body {
+	font-family: "Roboto", sans-serif;
+}
+
+/* Layout */
+.container {
+	display: grid;
+	grid-template:
+		"sidebar header header"
+		"sidebar main main"
+		"sidebar main main";
+
+	grid-template-columns: minmax(150px, 300px) 1fr 1fr;
+}
+
+.container_header {
+	grid-area: header;
+}
+
+.container_sidebar {
+	grid-area: sidebar;
+}
+
+.container_main {
+	grid-area: main;
+}
+
+/* Sidebar */
+
+.container_sidebar {
+	background-color: #2e92d4;
+	color: #ffffff;
+	padding: 20px;
+
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+}
+
+.sidebar_logo img {
+	min-width: 40px;
+}
+
+.sidebar_logo {
+	margin-bottom: 20px;
+}
+
+.nav_up_elements,
+.nav_down_elements {
+	font-weight: 800;
+	margin-bottom: 10px;
+}
+
+.sidebar_logo,
+.nav_up_elements,
+.nav_down_elements {
+	display: flex;
+	align-content: center;
+	gap: 20px;
+	cursor: pointer;
+}
+
+.nav_up_elements,
+.nav_down_elements {
+	gap: 40px;
+}
+
+.sidebar_logo img,
+.nav_up_elements img,
+.nav_down_elements img {
+	filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+}
+
+/* Header */
+
+.container_header {
+	display: grid;
+	grid-template-columns: 1fr;
+
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+	z-index: 2;
+}
+
+.header_up {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 10px 30px;
+}
+
+.header_down {
+	display: flex;
+	padding: 10px 30px;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.header_up_search {
+	display: flex;
+}
+
+.search_bar {
+	border-style: none;
+	background-color: #eff6ff;
+	border-radius: 10px;
+	width: 45vw;
+	padding: 5px;
+	margin-left: 20px;
+}
+
+.header_up_profile {
+	display: flex;
+	align-items: center;
+	font-weight: 800;
+	gap: 30px;
+}
+
+.header_up_profile img:nth-child(1) {
+	min-width: 30px;
+}
+
+.header_up_profile img:nth-child(2) {
+	min-width: 50px;
+}
+
+.header_down_profile {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+}
+
+.header_down_profile img {
+	min-width: 80px;
+}
+
+.profile_name_down {
+	display: flex;
+	flex-direction: column;
+	font-weight: 800;
+	font-size: 14px;
+}
+
+.profile_name_down span {
+	font-size: 20px;
+}
+
+.header_down_btn {
+	display: flex;
+	align-items: center;
+	gap: 30px;
+}
+
+.btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #2e92d4;
+	color: #ffffff;
+	width: 100px;
+	height: 40px;
+	border-radius: 40px;
+	font-weight: 800;
+}
+
+/* Main */
+
+.container_main {
+	display: grid;
+	grid-template-columns: 2fr minmax(100px, 400px);
+	background-color: #e2e8f0;
+	gap: 10px;
+}
+
+.main_article {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 0fr;
+	grid-auto-rows: 250px;
+	height: 100vh;
+	gap: 20px;
+	margin: 20px;
+	padding-bottom: 50px;
+}
+
+.main_article > p {
+	grid-column: span 2;
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.cards_article {
+	background-color: #ffffff;
+	border-radius: 10px;
+	border-left: #f0b429 10px solid;
+	padding: 30px;
+	display: flex;
+	flex-direction: column;
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
+.cards_article .title {
+	font-weight: 800;
+}
+
+.cards_article p:nth-child(2) {
+	margin-top: 20px;
+}
+
+.icons_box {
+	display: flex;
+	justify-content: flex-end;
+	gap: 20px;
+	margin-top: 20px;
+}
+
+.main_side {
+	display: flex;
+	flex-direction: column;
+	padding: 20px;
+}
+
+.announcement_card {
+	margin-bottom: 10px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid rgb(189, 186, 186);
+}
+
+.announcement_card:nth-child(3) {
+	border: none;
+	margin: 0;
+	padding-bottom: 0;
+}
+
+.announcements_box {
+	background-color: #ffffff;
+	border-radius: 20px;
+	padding: 25px;
+	margin-top: 10px;
+}
+
+.announcements_text {
+	font-size: 0.8rem;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+
+.title_an {
+	font-weight: 600;
+}
+
+.trending {
+	margin: 20px 0 20px 0;
+}
+
+.trending-box {
+	background-color: #ffffff;
+	border-radius: 20px;
+	padding: 25px;
+	margin-top: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.trending-card {
+	display: flex;
+	padding-bottom: 10px;
+	align-items: center;
+	gap: 10px;
+}
+
+.trending-card img {
+	min-width: 50px;
 }
